# tinytable

./: .coverage  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  data.db  mypy.ini  pyproject.toml  ruff.toml  setup.py
.github/workflows/: ci.yml
tests/: conftest.py  test_column_row.py  test_iloc.py  test_read.py  test_table_aggregations.py  test_table_behavior.py  test_table_core.py  test_table_data_ops.py  test_table_na.py  test_write.py
tests/data/: data.db  new_people.csv  new_people.xlsx  new_people_copy.xlsx  people.csv  people.xlsx
tinytable/: __init__.py  column.py  csv.py  excel.py  filter.py  functions.py  group.py  iloc.py  row.py  sqlite.py  subroutines.py  table.py  types.py  utils.py
tinytable/functional/: features.py  filter.py  group.py  inplace.py  rows.py  table.py  utils.py
