[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinytable"
description = "Pure Python lite version of Pandas DataFrame."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Odos Matthews", email = "odosmatthews@gmail.com"}
]
keywords = ["dataframe", "table", "data", "csv", "excel", "sqlite"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "tinytim>=1.9.6",
  "openpyxl",
  "tabulate",
  "sqlite-utils",
  "hasattrs",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/eddiethedean/tinytable"
Repository = "https://github.com/eddiethedean/tinytable"

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy>=1.8",
  "ruff>=0.5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tinytable*"]

[tool.setuptools.dynamic]
version = {attr = "tinytable.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=tinytable",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["tinytable"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

